# video-semantic-search

./: README.md  app.py  pyproject.toml  use_image_sample_app.py  xclip_app.py
